# slade-kenya-compliance

./: .pre-commit-config.yaml  README.md  pyproject.toml
kenya_compliance/: hooks.py
kenya_compliance/kenya_compliance/: handlers.py  utils.py
kenya_compliance/kenya_compliance/apis/: api_builder.py  apis.py  remote_response_status_handlers.py  slade.py  test_api_builder.py
kenya_compliance/kenya_compliance/background_tasks/: tasks.py
kenya_compliance/kenya_compliance/doctype/: doctype_names_mapping.py
kenya_compliance_via_slade/: hooks.py  patches.txt
kenya_compliance_via_slade/docs/: architecture.md  customisations.md  dashboard_reports.md  doctypes.md  features.md  setup_configuration.md
kenya_compliance_via_slade/docs/doctypes/: current_environment_identifier.md  environment_settings.md  operation_type.md  routes_reference.md
kenya_compliance_via_slade/docs/features/: imports_fetch.md  item_registration.md  registered_purchases.md  (+3 more)
kenya_compliance_via_slade/fixtures/: custom_field.json  navari_etims_country.json  navari_etims_import_item_status.json  navari_etims_item_type.json  navari_etims_packaging_unit.json  navari_etims_product_type.json  navari_etims_purchase_receipt_type.json  navari_etims_routes.json  navari_etims_stock_movement_type.json  navari_etims_transaction_type.json  navari_etims_unit_of_quantity.json  navari_kra_etims_item_classification.json  navari_kra_etims_payment_type.json  navari_kra_etims_taxation_type.json  navari_kra_etims_transaction_progress.json
kenya_compliance_via_slade/kenya_compliance_via_slade/: handlers.py  utils.py
(+155 files in other folders)
